--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Rodrigo Villa | El Triunfante del Pueblo</title>
         <meta name="title" content="Rodrigo Villa | El Triunfante del Pueblo">
         <meta name="description" content="Descubre la música de Rodrigo Villa, conocido como 'El Triunfante del Pueblo'. Su arte cautiva con temáticas cotidianas y emociones universales">
-        <link rel="canonical" href="https://webpy.co/">
+        <link rel="canonical" href="https://eltriunfantedelpueblo.com//">
         
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://webpy.bubbleapps.io/id?c=508">
@@ -28,8 +28,8 @@
 {
   "@context": "https://schema.org/",
   "@type": "WebSite",
-  "name": "Webpy",
-  "url": "https://www.webpy.co/",
+  "name": "Rodrigo Villa",
+  "url": "https://eltriunfantedelpueblo.com/",
   "potentialAction": {
     "@type": "SearchAction",
     "target": "{search_term_string}",
